[tool.poetry]
name = "local-circuit"
version = "0.1.0"
description = ""
authors = ["Sandro Sgier"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
cupy = "^12.3.0"
pyqt5 = "5.15.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
